# beauty-salon

./: .gitignore  README.md  test.html
Css/: contacto.css  inicio.css  menuInicio.css  productos.css  servicios.css
HTML/: contacto.html  inicio.html  menuInicio.html  productos.html  servicios.html
api/: Cargo.toml  Dockerfile  fly.toml
api/migrations/2023-11-30-153703_create_users/: up.sql
api/migrations/2023-12-01-020655_create_images/: up.sql
api/migrations/2023-12-01-020655_create_products/: up.sql
api/migrations/2023-12-01-020656_create_products/: up.sql
api/migrations/2023-12-01-032346_create_role/: up.sql
api/migrations/2023-12-01-033956_create_sex/: down.sql  up.sql
api/migrations/2023-12-01-034043_create_users/: up.sql
api/migrations/2023-12-01-041040_create_passwords/: down.sql  up.sql
api/migrations/2023-12-01-043511_create_jwt/: down.sql  up.sql
api/migrations/2023-12-07-054230_create_jwt/: up.sql
api/migrations/2023-12-09-034705_create_appointment/: down.sql  up.sql
api/migrations/2023-12-11-042354_create_favorites/: up.sql
api/src/: main.rs  schema.rs
api/src/appointment/: actions.rs  mod.rs  models.rs  routes.rs
api/src/auth/: actions.rs  mod.rs  models.rs  routes.rs
api/src/favorites/: actions.rs  mod.rs  models.rs  routes.rs
api/src/models/: auth.rs  images.rs  mod.rs  products.rs  schema.rs  types.rs  user.rs
api/src/product/: actions.rs  mod.rs  models.rs  routes.rs
api/src/resources/: actions.rs  mod.rs  models.rs  routes.rs
api/src/user/: actions.rs  mod.rs  models.rs  routes.rs
experiments/: image.html  load.html  login.html  products.html
js/: api.config.js  config.js  products.js  resources.js
salon/: package-lock.json  package.json
src/: contacto.html  cuenta.html  favoritos.html  index.html  inicio.html  productos.html  products.html  reserva.html  (+1 more)
(+293 files in other folders)
