[package]
name = "api"
version = "0.1.0"
edition = "2021"
authors = ["Carlos Ramos"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Database
diesel = { version = "2.1.4", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.1.0"
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }

# Environment variables
dotenv = "0.15.0"

# Serialization and deserialization
serde = { version = "1.0.130", features = ["derive"] }

# Logging
log = "0.4.14"
env_logger = "0.10.1"


# Web framework
actix-web = "4.4.0"
actix-web-httpauth = "0.8.1"
actix-cors = "0.6.4"

# Types
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = "0.4.31"
base64 = { version = "0.21.5", features = [] }
